--- a/src/Counter.module.css
+++ b/src/Counter.module.css
@@ -1,7 +1,7 @@
 .counter {
     /*text-align: center;*/
     height: 100vh;
-    background-color: #383838;
+    background-color: #2a2c36;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,14 +11,14 @@
     /*box-sizing: border-box;*/
     width: 500px;
     height: 400px;
-    border: 3px solid #61dafb;
+    border: 3px solid #6ee4ff;
     border-radius: 10px;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    /*justify-content: center;*/
+    justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    /*gap: 20px;*/
 }
 
 .score {
@@ -26,13 +26,19 @@
     width: 460px;
     height: 205px;
     border-radius: 10px;
-    background-color: #61dafb;
-    font-size: 100px;
+    background-color: #6ee4ff;
+    font-size: 120px;
     font-weight: 600;
-    color: #383838;
+    color: #2a2c36;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: default;
+}
+
+.scoreRed {
+    color: red;
+    font-weight: 700;
 }
 
 .control {
@@ -40,9 +46,9 @@
     width: 460px;
     height: 135px;
     padding: 20px;
-    border: 3px solid #61dafb;
+    border: 3px solid #6ee4ff;
     border-radius: 10px;
-    background-color: #383838;
+    background-color: #2a2c36;
     display: flex;
     justify-content: space-between;
     align-items: center;
