--- a/src/Counter.module.css
+++ b/src/Counter.module.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 100px;
 }
 
 .inner {
@@ -18,14 +19,3 @@
     align-items: center;
 }
 
-.control {
-    width: 460px;
-    height: 135px;
-    padding: 20px;
-    border: 3px solid #6ee4ff;
-    border-radius: 10px;
-    background-color: #2a2c36;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
